manifests/jackett/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jackett
  namespace: jackett
spec:
  selector:
    matchLabels:
      app: jackett
  minReadySeconds: 10
  template:
    metadata:
      namespace: jackett
      labels:
        app: jackett
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: jackett
        image: lscr.io/linuxserver/jackett:latest
        ports:
        - containerPort: 9117
          name: jackett
        volumeMounts:
        - name: data
          mountPath: /downloads
        - name: data
          mountPath: /config
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "longhorn"
        resources:
          limits:
            storage: 150Mi
          requests:
            storage: 100Mi
