manifests/jackett/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jackett-svc
  name: jackett-svc
  namespace: jackett
spec:
  ports:
  - name: "http"
    port: 80
    protocol: TCP
    targetPort: 9117
    nodePort: 30319
  selector:
    app: jackett
  type: NodePort
status:
  loadBalancer: {}
