manifests/jackett/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: jackett
spec:
  ingressClassName: nginx
  rules:
  - host: jackett.cflor.org
    http:
      paths:
      - backend:
          service:
            name: jackett
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
